--- a/app/views/main.html
+++ b/app/views/main.html
@@ -7,10 +7,9 @@
                         <p>aims at encouraging female techprenuers to be more <br />
                         involved in computer programming and to work in teams. <br>
                         <br>
-                        <a class="button">Participate</a>  </p>
+                        <a href="#/login" class="button">Participate</a>  </p>
                     </header>
-                    <span class="image"><img data-ng-src="images/ic.jpg"  alt="" /></span>
+                    <span class="image"><img src="images/ic.jpg" /></span>
                 </div>
-                <a href="#one" class="goto-next scrolly">Next</a>
             </section>
         </div>
